crates/aleph-cli/src/commands/snapshots/aleph__commands__token__tests__result_json_ophis_eth_snapshot.snap
---
source: crates/aleph-cli/src/commands/token.rs
expression: "result_json_ophis_eth(SwapToken::Eth, &sample_quote(), \"0xfeed\")"
---
{
  "expected_aleph": "1",
  "fee": "0.0000000000001",
  "min_aleph": "0.995",
  "partner_fee_bps": 10,
  "sell_amount": "0.00000000005",
  "sell_token": "ETH",
  "tx_hash": "0xfeed",
  "venue": "ophis"
}
